--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropdown": "^1.8.0",
+    "react-dropdown-now": "^3.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
@@ -32,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.1"
   }
 }
